<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UserFragment">


    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvGold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gold"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>
    <TextView
        android:id="@+id/tvKarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karma"
        app:layout_constraintStart_toStartOf="@id/tvGold"
        app:layout_constraintTop_toBottomOf="@id/tvGold"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>
    <Button
        android:background="@color/purple_200"
        android:id="@+id/addFriend"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/add_to_friends"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
        />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/tvComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tbComments"
        app:layout_constraintEnd_toEndOf="@id/tbComments"
        app:layout_constraintBottom_toBottomOf="@id/tbComments"
        app:layout_constraintTop_toTopOf="@id/tbComments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbComments" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>