<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/authFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.humblr.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_home_to_oneSubFragment"
            app:destination="@id/oneSubFragment" />
        <action
            android:id="@+id/action_navigation_home_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.humblr.ui.fragments.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.humblr.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_profile_to_userFragment2"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/onboardFragment"
        android:name="com.example.humblr.ui.fragments.OnboardFragment"
        android:label="fragment_onboard"
        tools:layout="@layout/fragment_onboard" >
        <action
            android:id="@+id/action_onboardFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/onboardFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.humblr.ui.fragments.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth" >
        <action
            android:id="@+id/action_authFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_authFragment_to_onboardFragment"
            app:destination="@id/onboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.humblr.ui.fragments.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <argument android:name="search" />
        <action
            android:id="@+id/action_searchFragment_to_oneSubFragment"
            app:destination="@id/oneSubFragment" />
        <action
            android:id="@+id/action_searchFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/oneSubFragment"
        android:name="com.example.humblr.ui.fragments.OneSubFragment"
        android:label="fragment_one_sub"
        tools:layout="@layout/fragment_one_sub" >
        <argument android:name="title" />
        <argument
            android:name="photo"
            app:argType="string"
            app:nullable="true" />
        <argument android:name="author" />
        <argument
            android:name="selfText"
            app:argType="string"
            app:nullable="true" />
        <argument android:name="link" />
        <argument android:name="id" />
        <action
            android:id="@+id/action_oneSubFragment_to_commentFragment"
            app:destination="@id/commentFragment" />
        <argument android:name="saved"
            app:argType="boolean" />
        <action
            android:id="@+id/action_oneSubFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/commentFragment"
        android:name="com.example.humblr.ui.fragments.CommentFragment"
        android:label="one_comment"
        tools:layout="@layout/one_comment" >
        <argument android:name="time" />
        <argument android:name="text" />
        <argument android:name="author" />
        <argument
            android:name="saved"
            app:argType="boolean" />
        <argument android:name="name" />
        <action
            android:id="@+id/action_commentFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.humblr.ui.fragments.UserFragment"
        android:label="fragment_user"
        tools:layout="@layout/fragment_user" >
        <argument android:name="name" />
    </fragment>
</navigation>